@@ -1,8 +1,9 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
- * 08Sep2016 Changed environment scripts extrae.sh and configured.sh to locate the EXTRAE_HOME path automatically
- * 08Sep2016 Fixes BFD configure check
+ + 07Sep2016 Adds event marking the periodicity of CPU events emission
+ * 06Sep2016 Changed environment scripts extrae.sh and configured.sh to locate the EXTRAE_HOME path automatically
+ * 06Sep2016 Fixes BFD configure check
  * 02Sep2016 Removes strict XML version check
  * 08Ago2016 Fixes make uninstall
  * 04Aug2016 Fixed bug in configure macro to check for pebs sampling
